Details
-
Bug
-
Resolution: Done
-
P2: Important
-
5.4.0, 5.6.0, 5.7.0 Alpha, 5.9.2
-
OSX 10.11
-
-
2c6de9c099f6a5c3f76cbb149177b6f1281bcd07 (qt/qtbase/dev) f8e0c7d008f02f4d62722d866bf4a19f6914493d (qt/qtbase/dev) 7dbab10b92485c182f3570d79a88a83e52fb582b (qt/qtbase/6.2) fb1eee2e7330d7ecb7e49f10d5167488afee71ae (qt/tqtc-qtbase/5.15)
Description
If a full screen window of QtQuick1 is closed on mac, whole screen goes black after that.
Steps to reproduce:
1. Open example Qt5.6.0/Examples/Qt-5.6/qtdeclarative/quick/window/window.qml
2. Click "Show" Button
3. On new window click maximize button
4. Click "X" button
Observe black screen.
Attachments
Issue Links
- relates to
-
QTBUG-68069 Exiting fullscreen window leaves the application in fullscreen mode on macOS
-
- Closed
-
-
QTBUG-46701 Closing a full screen window via Qt APIs leaves the screen black on macOS
-
- Closed
-
- mentioned in
-
Page Loading...
For Gerrit Dashboard: QTBUG-52450 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
214278,1 | Cocoa: Transition out of fullscreen on window close | 5.9 | qt/qtbase | Status: DEFERRED | 0 | 0 |
227275,4 | macOS: Close windows via [NSWindow performClose:] | dev | qt/qtbase | Status: DEFERRED | -1 | 0 |
368679,2 | Doc: add note that hiding a window doesn't close a full screen space | dev | qt/qtbase | Status: MERGED | +2 | 0 |
368870,2 | Doc: add note that hiding a window doesn't close a full screen space | 6.2 | qt/qtbase | Status: MERGED | +2 | 0 |
368874,2 | Doc: add note that hiding a window doesn't close a full screen space | tqtc/lts-5.15 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |