Doc: add note that hiding a window doesn't close a full screen space

Fixes: QTBUG-52450
Change-Id: I3f819bac470b5a883a74fb58f6fa2d27740eaaf2
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>
(cherry picked from commit 2c6de9c099f6a5c3f76cbb149177b6f1281bcd07)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>